# OSED-Toolkit

./: .aider.input.history  .gitignore  Makefile  README.md  bf-em-01.py  config.badchars.json  main.py  pyproject.toml  run_badchars.py
Documentation/Roadmap/: M1-Core-State-Model.md  M2-Explanation-Engine.md  M3-Lesson-System.md  M4-Minimal-Executor.md  M4-Textual-UI.md  M4.5-Reference-Lesson.md  M5-Inspect-System.md  README.md
Documentation/WinDbg/: Commands_Reference.md  Shellcode_Debugging.md  Structure_Inspection.md
Documentation/architecture/: shellforge-csharp-plan.md
Documentation/windows_x86_shellcode/: PEB-and-PE-Export-Resolution.md  README.md  ShellcodeWalkthrough.md  Shellcode_Reference.md  osed_exam_day_checklist.md  shellcode_package.md  shellcode_x64.md  skeleton_analysis.md
Examples/: 01_calc_winexec.py  02_revshell.py  03_bindshell.py  04_custom_functions.py  05_file_copy_exec.py  README.md
Experiments/Linux/: call_demo.c  frame_demo.c  gdb_notes.md
Experiments/Windows/: hash.py  ip_to_hex.py  pic_example.asm
Experiments/Windows/osed_vuln_lab/: CHANGELOG.md  CMakeLists.txt  README.md  gadget_json_schema.md  training_path.md  windbg_aslr_dep.txt  windbg_dep.txt  windbg_easy.txt  windbg_seh.txt
Experiments/Windows/osed_vuln_lab/gadgets/: gadgets_template.json
Experiments/Windows/osed_vuln_lab/include/: osed_protocol.h  osedhelper.h
Experiments/Windows/osed_vuln_lab/python/: __init__.py  exploit_scaffold.py  protocol_smoketest.py  vulnserver_trigger.py
Experiments/Windows/osed_vuln_lab/src/: osed_vulnsvc.c  osedhelper.c  vulnserver_lab.c
Experiments/Windows/osed_vuln_lab/vs/: README.md
Experiments/vulnserver/: trun_exploit.py  trun_exploit_v2.py
Exploits/: __init__.py
Exploits/templates/: README.md  file_drop.py  tcp_lineproto.py  tcp_raw.py
Exploits/windows_x86/: ShellcodeFrameworkContracts.md  ShellcodeNotes-Windbg.md  peb_walk.py  shellcode-01.py  shellcode-02.py  shellcode-03.py  shellcode-04.py
Learning/Foundations/: 02-tracing-input.md  README.md
Learning/Win32_X86/: README.md
Learning/WinDbg/: Cheatsheet.md
Notes/: 01_call_ret_state_transitions.md  02_stack_frame_layout.md  03_jmp_esp_and_redirection.md  04_stack_exploitation_mechanics.md  05_protocol_badchars_reference.md  06-Exploit-Control-Flow-Model.md  06_egghunter.md  07-Movement.md  RVA-Manual.md  RVA.md
Notes/BufferOverflows/: Useful-Gadget-Byte-Patterns.md  Windbg-Command-Examples.md
Tools/: README.md  _bootstrap.py  gadgetfind.py
Tools/Value_Conversion_Scripts/: README.md  __init__.py  ascii2hex.py  cli.py  ip2hex.py  opcode.py  string2hex.py
Tools/Windows/: ExportWalker.md  SYSCALLS.md  VAandRVA.md  (+4 more)
Tutorials/: README.md  notes-template.md  roadmap.md  windbg-cheatsheet.md
asm_lab/: __init__.py  app.py  models.py
docs/: json-contract.md
osed-windbg/: .gitignore  build.js
scripts/: emitter.sh
shellforge/: __init__.py  __main__.py  builder.py  cli.py  interfaces.py  model.py  registry.py
tests/: fakes.py  test_badchar_analyzer.py  test_badchars.py  test_build_cmd.py  test_cdb_driver.py  test_crashtriage_cli.py  test_crashtriage_parser.py  test_crashtriage_ranker.py  test_egghunter_unified_builder.py  test_exploit_framework.py  test_exploit_transport.py  test_full_compare.py  test_integration.py  test_orchestrator.py  test_pattern.py  test_rawlayout_payload_builder.py  test_string2hex.py  test_validate_cdb.py  test_wds.py  test_windows_x86_skeleton_smoke.py
(+439 files in other folders)
