[project]
name = "osed-toolkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "capstone>=5.0.6",
    "keystone>=29.0.1",
]

[project.scripts]
shellforge = "shellforge.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["Tools*", "shellforge*"]
